Remove server browser table header gap. Fix browser control SVG styling being overridden.

--- a/module/legacy/_browser.scss
+++ b/module/legacy/_browser.scss
@@ -271,15 +271,6 @@
   order: 80 !important;
 }
 
-._26Gmfe09NRsnF7eprTZYdY ._2UTNf-Ec4o5_3LPJtc2u7M svg {
-  background-color: var(--zehn-color-icon-primary) !important;
-  mask-repeat: no-repeat !important;
-  mask-position: center !important;
-  mask-size: var(--zehn-size-icon-md) !important;
-  width: 100% !important;
-  height: 100% !important;
-}
-
 /* PREVIOUS BUTTON */
 ._26Gmfe09NRsnF7eprTZYdY>._2UTNf-Ec4o5_3LPJtc2u7M:nth-child(1) svg {
   -webkit-mask-image: var(--zehn-icon-direction-backwards) !important;
