--- a/module/window/app/_servers.scss
+++ b/module/window/app/_servers.scss
@@ -173,7 +173,7 @@
 
 // INNER CONTAINER
 ._2rxrVvbku0AC8Qbequ4-z9 ._2SvsKGOQeIoV8laKj5Ql5s ._2YSm1vJtLeKb9BbihsLY1F ._2_4_nZy-T2C3pHa81tGH76 ._1m0suXtV6O2fXS1Gn-nWVw {
-  gap: var(--zehn-size-spacing-xs) !important;
+  gap: 0 !important;
 }
 
 // HEADER COLUMN
